agrego nav + header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Elden Ring</title>
   </head>
-  <body></body>
+  <body>
+    <!--nav-->
+    <nav class="nav" >
+      <input type="checkbox" id="nav-check">
+        <div class="nav-header ">
+          <div class="nav-title">
+            <a href="#banner" "><img class=" logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
+          </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+        <div class="nav-links ">
+          <a href="#caracteristicas" ">Caracteristicas Principales</a>
+          <a href=" #personajes" ">Personajes</a>
+          <a href=" #laerasinluz" ">Los era Sin Luz</a>
+          <a href=" #noticias" ">Noticias</a>
+          <a href=" #redesSociales" ">Redes Sociales</a>
+          <a href=" #store" ">Store</a>
+          <a href=" #soporte" ">Soporte</a>
+        </div>
+    </nav>
+    <!--Header-->
+    <header >
+      <div>
+        <video src=" https://static.bandainamcoent.eu/video/elden-ring-header-animated.webm" width="100%" autoplay mute loop>
+      </div>
+      <div class="position-center">
+        <img class="banner-title" src="./assets/img/titlecel.jpg" alt="Elden Ring logo">
+      </div>
+      <div class="text-center" id="banner">
+        <div class="justify-content py-1 color-blanco">
+          <p> <span class="color-dorado peso-bold ">Fecha de lanzamiento: </span> 25/02/2022</p>
+          <p> <span class="color-dorado peso-bold ">Genero: </span> Rol </p>
+          <p> <span class="color-dorado peso-bold ">Desarrollador: </span>FromSoftware, Inc</p>
+        </div>
+        <div class="py-1 peso-bold">
+          <a class="color-blanco " href="https://es.bandainamcoent.eu/press/5032" target="_blank">PressKit</a>
+        </div>
+      </div>
+    </header>
+
+  </body>
 </html>
