--- a/index.html
+++ b/index.html
@@ -302,6 +302,24 @@
             </div>
         </div>
     </section>
+    <section>
+      <div class="bloque parallax cover-4"></div>
+      <div class="bloque">
+        <div class="contenedor py-3">
+          <div class="solo-pantallas-grandes">
+            <div class="position-center">
+              <img class="premio-width" src="./assets/img/goty.jpg" alt="Elden Ring">
+            </div>
+          </div>
+          <div class="solo-pantallas-chicas">
+            <div class="position-center"><img class="premio-width-responsive"
+                    src="./assets/img/goty.jpg" alt="Elden Ring">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="text-center">Footer</footer>
     </main>
   </body>
   <script src="./js/index.js"></script>
