Termino el index

--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
         </div>
         <div class="nav-links ">
           <a href="#caracteristicas" ">Caracteristicas Principales</a>
-          <a href=" #personajes" ">Personajes</a>
-          <a href=" #laerasinluz" ">Los era Sin Luz</a>
-          <a href=" #noticias" ">Noticias</a>
-          <a href=" #redesSociales" ">Redes Sociales</a>
-          <a href=" #store" ">Store</a>
-          <a href=" #soporte" ">Soporte</a>
+          <a href="./noticias.html" ">Noticias</a>
+
         </div>
     </nav>
     <!--Header-->
@@ -302,6 +298,7 @@
             </div>
         </div>
     </section>
+    <!--section#4-->
     <section>
       <div class="bloque parallax cover-4"></div>
       <div class="bloque">
@@ -319,6 +316,57 @@
         </div>
       </div>
     </section>
+    <!--section#5-->
+    <section>
+      <div class="bloque parallax cover-5" id="redesSociales"></div>
+      <div class="bloque">
+        <div class="container-fluid">
+          <div class="justify-content">
+            <div class="box1 px-1">
+              <div class="box-suscripto py-3 color-dorado">
+                <h2 class="">No te pierdas de ninguna noticia</h2>
+                <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
+                <div class="py-3">
+                  <div class="text-center">
+                    <input class="input-suscribirse" type="text"> <button class="btn" type="button">ME SUSCRIBO!</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class=" box2 px-1 bg-dorado-transparent">
+              <div class="box-suscripto py-3 color-dorado">
+                <h2>Síguenos</h2>
+                <h3>Forma parte de la comunidad. </h3>
+                <div class="iconos-flex py-3">
+                  <div>
+                    <a href="">
+                      <img class="iconos-item " src="./assets/icons/face.png" alt="Avatar" style="width:100%">
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+      <!--section#6-->
+      <section>
+        <div class="bloque parallax cover-6" id="soporte"></div>
+        <div class="bloque">
+          <div class="container-fluid">
+            <div class="box1 px-1 ">
+              <div class="box-suscripto py-3 color-dorado">
+                <h3>¿Necesitas ayuda?</h3>
+                <h4> ¡Puede que tengamos una solución para ti!</h4>
+                <div class="py-3">
+                  <a href=""><button class="btn">PREGUNTA AL EQUIPO DE SOPORTE</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     <footer class="text-center">Footer</footer>
     </main>
   </body>
