--- a/noticias.html
+++ b/noticias.html
@@ -23,20 +23,20 @@
                 <span></span>
             </label>
         </div>
-        <div class="nav-links ">
-          <a href="./index.html" ">Home</a>
-          <a href="./noticias.html" ">Noticias</a>
-          <a href="./historia.html" ">Historia</a>
+        <div class="nav-links">
+          <a href="./index.html">Home</a>
+          <a href="./noticias.html">Noticias</a>
+          <a href="./historia.html">Historia</a>
+          <a href="./store.html">Store</a>
+          <a href="./requisitos.html">Requisitos</a>
         </div>
     </nav>
     <main>
     <!-- section#4-->
     <section>
-      <div class="bloque" id="noticias">
+      <div class="bloque parallax cover-12"></div>
+      <div class="bloque">
         <div class="container-fluid">
-          <div class="text-center color-blanco py-3">
-            <h2>Noticias</h2>
-          </div>
           <div class="d-grid grid-list-container-news">
             <div class="card">
               <img src="https://p325k7wa.twic.pics/high/elden-ring/elden-ring/03-news/er-thumbnail-colosseum-thumbnail.png?twic=v1/resize=1210/step=10/quality=80" alt="Avatar" style="width:100%">
@@ -112,7 +112,7 @@
                   </div>
                 </div>
               </div>
-              <div class="text-center">
+              <div class="text-center py-1">
                 <button class="btn"> ver </button>
               </div>
             </article>
