modifico el index

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <span></span>
             </label>
         </div>
-        <div class="nav-links ">
-          <a href="#caracteristicas" ">Caracteristicas Principales</a>
-          <a href="./noticias.html" ">Noticias</a>
-
+        <div class="nav-links">
+          <a href="./index.html">Home</a>
+          <a href="./noticias.html">Noticias</a>
+          <a href="./historia.html">Historia</a>
+          <a href="./store.html">Store</a>
+          <a href="./requisitos.html">Requisitos</a>
         </div>
     </nav>
     <!--Header-->
