--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
       <!-- section #1-->
       <section>
-        <div class="bloque parallax cover-1"></div>
+        <!-- <div class="bloque parallax cover-1"></div> -->
           <div class="bloque py-3">
             <div class="container-fluid">
               <div class="justify-content ">
