--- a/store.html
+++ b/store.html
@@ -8,29 +8,23 @@
     <title>Elden Ring</title>
   </head>
   <body>
-    <!--nav-->
-    <nav class="nav" >
-      <input type="checkbox" id="nav-check">
-        <div class="nav-header ">
-          <div class="nav-title">
-            <a href="#banner" "><img class=" logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
-          </div>
-        </div>
-        <div class="nav-btn">
-            <label for="nav-check">
-                <span></span>
-                <span></span>
-                <span></span>
-            </label>
-        </div>
-        <div class="nav-links">
-          <a href="./index.html"">Home</a>
-          <a href="./noticias.html">Noticias</a>
-          <a href="./historia.html">Historia</a>
-          <a href="./store.html">Store</a>
-          <a href="./requisitos.html">Requisitos</a>
-        </div>
-    </nav>
+    <header class="header">
+      <!-- Logo -->
+      <a  href="./index.html"><img class="logo-nav" src="./assets/img/titlecel.jpg" alt="Elden Ring logo"></a>
+      <!-- Hamburger icon -->
+      <input class="side-menu" type="checkbox" id="side-menu"/>
+      <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+      <!-- Menu -->
+      <nav class="nav">
+          <ul class="menu">
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./noticias.html">Noticias</a></li>
+              <li><a href="./historia.html">Historia</a></li>
+              <li><a href="./store.html">Store</a></li>
+              <li><a href="./requisitos.html">Requisitos</a></li>
+          </ul>
+      </nav>
+    </header>
     <main>
     <!--section#4-->
     <section>
