--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
           <div class="container-fluid">
             <div class="justify-content">
               <div class="box1 px-1">
-                <div class="box-suscripto py-3 color-dorado">
-                  <h2 class="">No te pierdas de ninguna noticia</h2>
+                <div class="box-suscripto py-3 color-dorado text-center">
+                  <h2 >No te pierdas de ninguna noticia</h2>
                   <h3> Recibe las ultimas actualizaciones de tus juegos favoritos</h3>
                   <div class="py-3">
                     <div class="text-center">
-                      <input class="input-suscribirse" type="text"> <button class="btn" type="button">ME SUSCRIBO!</button>
+                      <input class="input-suscribirse" type="text"> <button class="btn btn-padding" type="button">ME SUSCRIBO!</button>
                     </div>
                   </div>
                 </div>
@@ -337,8 +337,20 @@
                   <h3>Forma parte de la comunidad. </h3>
                   <div class="iconos-flex py-3">
                     <div>
-                      <a href="">
-                        <img class="iconos-item " src="./assets/icons/face.png" alt="Avatar" style="width:100%">
+                      <a href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/face.png" alt="facebook" style="width:100%">
+                      </a>
+                      <a href="https://www.instagram.com/bandainamcous/" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/instagram.png" alt="instagram" style="width:100%">
+                      </a>
+                      <a href="https://twitter.com/bandainamcoeu/" target="_blank">
+                        <img class="iconos-item"  src="./assets/icons/twitter.png" alt="twitter" style="width:100%">
+                      </a>
+                      <a href="https://www.youtube.com/user/NamcoBandaiGamesEU" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/youtube.png" alt="youtube" style="width:100%">
+                      </a>
+                      <a href="https://discord.com/invite/eldenring" target="_blank">
+                        <img class="iconos-item" src="./assets/icons/discord.png" alt="discord" style="width:100%">
                       </a>
                     </div>
                   </div>
@@ -358,7 +370,7 @@
                   <h3>¿Necesitas ayuda?</h3>
                   <h4> ¡Puede que tengamos una solución para ti!</h4>
                   <div class="py-3">
-                    <a href=""><button class="btn">PREGUNTA AL EQUIPO DE SOPORTE</button></a>
+                    <a href="https://service-es.bandainamcoent.eu/app/list/p/7916/" target="_blank"><button class="btn">PREGUNTA AL EQUIPO DE SOPORTE</button></a>
                   </div>
                 </div>
               </div>
@@ -383,7 +395,7 @@
                   <li><a href="./requisitos.html">Requisitos</a></li>
               </ul>
               </div>
-              <div class="box">
+              <div class="box text-center">
                   <h2>SIGUENOS</h2>
                   <div class="red-social">
                       <a href="https://www.facebook.com/bandainamcolatinoamerica/?brand_redir=233213603406398" target="_blank" class="fa fa-facebook"></a>
